--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "基于 koa 实现的二维码获取库",
   "main": "index.js",
   "scripts": {
+    "start": "supervisor index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
